# recipe_to_notion

./: api.py  pyproject.toml
src/: scrape.py
